; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/watchdog/extr_mcs814x_wdt.c_mcs814x_wdt_stop.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/watchdog/extr_mcs814x_wdt.c_mcs814x_wdt_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }
%struct.mcs814x_wdt = type { i32, i64 }

@WDT_CTRL = common dso_local global i64 0, align 8
@WDT_CTRL_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*)* @mcs814x_wdt_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcs814x_wdt_stop(%struct.watchdog_device* %0) #0 {
  %2 = alloca %struct.watchdog_device*, align 8
  %3 = alloca %struct.mcs814x_wdt*, align 8
  %4 = alloca i32, align 4
  store %struct.watchdog_device* %0, %struct.watchdog_device** %2, align 8
  %5 = load %struct.watchdog_device*, %struct.watchdog_device** %2, align 8
  %6 = call %struct.mcs814x_wdt* @watchdog_get_drvdata(%struct.watchdog_device* %5)
  store %struct.mcs814x_wdt* %6, %struct.mcs814x_wdt** %3, align 8
  %7 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %8 = getelementptr inbounds %struct.mcs814x_wdt, %struct.mcs814x_wdt* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %11 = getelementptr inbounds %struct.mcs814x_wdt, %struct.mcs814x_wdt* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @WDT_CTRL, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i32 @readl_relaxed(i64 %14)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* @WDT_CTRL_EN, align 4
  %17 = xor i32 %16, -1
  %18 = load i32, i32* %4, align 4
  %19 = and i32 %18, %17
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %22 = getelementptr inbounds %struct.mcs814x_wdt, %struct.mcs814x_wdt* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @WDT_CTRL, align 8
  %25 = add nsw i64 %23, %24
  %26 = call i32 @writel_relaxed(i32 %20, i64 %25)
  %27 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %28 = getelementptr inbounds %struct.mcs814x_wdt, %struct.mcs814x_wdt* %27, i32 0, i32 0
  %29 = call i32 @spin_unlock(i32* %28)
  ret i32 0
}

declare dso_local %struct.mcs814x_wdt* @watchdog_get_drvdata(%struct.watchdog_device*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
